# nemo

./: .gitignore  Makefile.am  config.h.in  configure.ac  configure.in  makepot  meson.build  meson_options.txt
cut-n-paste-code/libegg/: meson.build
data/: meson.build  nemo-autostart.desktop.in  nemo.desktop.in.in  org.Nemo.service.in  org.nemo.freedesktop.FileManager1.service.in
data/icons/: meson.build
debian/: control  nemo-data.install  rules
docs/: meson.build
docs/reference/libnemo-extension/: meson.build
eel/: eel-stock-dialogs.c  meson.build
files/: meson.build
files/usr/lib/cinnamon-settings/modules/: cs_nemo.py
files/usr/lib/nemo-plugin-manager/: ListWidgets.py  nemo-plugin-manager.py
gresources/: meson.build  nemo-file-management-properties.glade
libnemo-extension/: Makefile.am  meson.build  nemo-action-config-widget.c  nemo-action-config-widget.h  nemo-config-base-widget.c  nemo-config-base-widget.h  nemo-extension-config-widget.c  nemo-extension-config-widget.h  nemo-plugin-manager-widget.c  nemo-plugin-manager-widget.h  nemo-script-config-widget.c  nemo-script-config-widget.h
libnemo-private/: Makefile.am  meson.build  nemo-action-manager.c  nemo-action-manager.h  nemo-action.c  nemo-action.h  nemo-bookmark.c  nemo-centered-placement-grid.c  nemo-column-utilities.c  nemo-debug.c  nemo-debug.h  nemo-desktop-utils.c  nemo-directory-async.c  nemo-directory-private.h  nemo-directory.c  nemo-entry.c  nemo-file-attributes.h  nemo-file-operations.c  nemo-file-operations.h  nemo-file-private.h  nemo-file-utilities.c  nemo-file-utilities.h  nemo-file.c  nemo-file.h  nemo-global-preferences.c  nemo-global-preferences.h  nemo-icon-canvas-item.c  nemo-icon-canvas-item.h  nemo-icon-container.c  nemo-icon-container.h  nemo-icon-dnd.c  nemo-icon-info.c  nemo-icon-info.h  nemo-icon-names.h  nemo-icon-private.h  nemo-job-queue.c  nemo-job-queue.h  nemo-local-trash-directory-file.c  nemo-local-trash-directory-file.h  nemo-local-trash-directory-private.h  (+24 more)
nemo-desktop/: Makefile.am  nemo-desktop.py  nemoDesktopManager.py  nemoDesktopMonitorView.py  nemoDesktopStage.py  singletons.py
nemo-desktop/binfiles/: Makefile.am
nemo-desktop/util/: Makefile.am
nemo-fallback-background-helper/: constants.py  helper.py  manager.py  monitorView.py  nemo-fallback-background-helper.py  service.py  stage.py
src/: Makefile.am  meson.build  nemo-actions.h  nemo-application.c  nemo-application.h  nemo-bookmark-list.c  nemo-bookmarks-window.c  nemo-desktop-application.c  nemo-desktop-icon-grid-view.c  nemo-desktop-icon-view.c  nemo-desktop-manager.c  nemo-desktop-manager.h  nemo-desktop-window.c  nemo-directory-view-ui.xml  nemo-empty-view.c  nemo-extensions-list.c  nemo-file-management-properties.c  nemo-file-management-properties.glade  nemo-icon-view-container.c  nemo-icon-view-grid-container.c  nemo-icon-view-ui.xml  nemo-icon-view.c  nemo-interesting-folder-bar.c  nemo-interesting-folder-bar.h  nemo-list-model.c  nemo-list-model.h  nemo-list-view.c  nemo-main-application.c  nemo-mime-actions.c  nemo-pathbar.c  nemo-places-sidebar.c  nemo-plugin-manager-main.c  nemo-progress-info-widget.c  nemo-progress-ui-handler.c  nemo-properties-window.c  nemo-statusbar.c  nemo-toolbar-ui.xml  nemo-toolbar.c  nemo-tree-sidebar.c  nemo-view.c  (+10 more)
test/: meson.build
