
dbusBuiltSources = gnome.gdbus_codegen(
    'nemo-generated',
    join_paths([meson.source_root(), 'data', 'dbus-interfaces.xml']),
    interface_prefix: 'org.Nemo.',
    namespace: 'NemoDBus',
    object_manager: true)

nemo_private_sources = [
    dbusBuiltSources,
    'nemo-action-manager.c',
    'nemo-action.c',
    'nemo-bookmark.c',
    'nemo-cell-renderer-disk.c',
    'nemo-centered-placement-grid.c',
    'nemo-clipboard-monitor.c',
    'nemo-clipboard.c',
    'nemo-column-chooser.c',
    'nemo-column-utilities.c',
    'nemo-context-menu-menu-item.c',
    'nemo-dbus-manager.c',
    'nemo-debug.c',
    'nemo-default-file-icon.c',
    'nemo-desktop-directory-file.c',
    'nemo-desktop-directory.c',
    'nemo-desktop-icon-file.c',
    'nemo-desktop-link-monitor.c',
    'nemo-desktop-link.c',
    'nemo-desktop-metadata.c',
    'nemo-desktop-utils.c',
    'nemo-directory-async.c',
    'nemo-directory.c',
    'nemo-dnd.c',
    'nemo-entry.c',
    'nemo-file-changes-queue.c',
    'nemo-file-conflict-dialog.c',
    'nemo-file-dnd.c',
    'nemo-file-operations.c',
    'nemo-file-queue.c',
    'nemo-file-undo-manager.c',
    'nemo-file-undo-operations.c',
    'nemo-file-utilities.c',
    'nemo-file.c',
    'nemo-global-preferences.c',
    'nemo-icon-canvas-item.c',
    'nemo-icon-container.c',
    'nemo-icon-dnd.c',
    'nemo-icon-info.c',
    'nemo-job-queue.c',
    'nemo-lib-self-check-functions.c',
    'nemo-link.c',
    'nemo-merged-directory.c',
    'nemo-metadata.c',
    'nemo-mime-application-chooser.c',
    'nemo-module.c',
    'nemo-monitor.c',
    'nemo-placement-grid.c',
    'nemo-places-tree-view.c',
    'nemo-program-choosing.c',
    'nemo-progress-info-manager.c',
    'nemo-progress-info.c',
    'nemo-query.c',
    'nemo-recent.c',
    'nemo-saved-search-file.c',
    'nemo-search-directory-file.c',
    'nemo-search-directory.c',
    'nemo-search-engine-simple.c',
    'nemo-search-engine.c',
    'nemo-selection-canvas-item.c',
    'nemo-separator-action.c',
    'nemo-signaller.c',
    'nemo-thumbnails.c',
    'nemo-trash-monitor.c',
    'nemo-tree-view-drag-dest.c',
    'nemo-ui-utilities.c',
    'nemo-undo-manager.c',
    'nemo-undo-signal-handlers.c',
    'nemo-undo-transaction.c',
    'nemo-undo.c',
    'nemo-vfs-directory.c',
    'nemo-vfs-file.c',
    'nemo-widget-action.c',
    'nemo-widget-menu-item.c',
]

nemo_private_headers = [
    'nemo-action-manager.h',
    'nemo-action.h',
    'nemo-bookmark.h',
    'nemo-cell-renderer-disk.h',
    'nemo-clipboard-monitor.h',
    'nemo-clipboard.h',
    'nemo-column-chooser.h',
    'nemo-column-utilities.h',
    'nemo-context-menu-menu-item.h',
    'nemo-dbus-manager.h',
    'nemo-debug.h',
    'nemo-default-file-icon.h',
    'nemo-desktop-directory-file.h',
    'nemo-desktop-directory.h',
    'nemo-desktop-icon-file.h',
    'nemo-desktop-link-monitor.h',
    'nemo-desktop-link.h',
    'nemo-desktop-metadata.h',
    'nemo-desktop-utils.h',
    'nemo-directory-notify.h',
    'nemo-directory-private.h',
    'nemo-directory.h',
    'nemo-dnd.h',
    'nemo-entry.h',
    'nemo-file-attributes.h',
    'nemo-file-changes-queue.h',
    'nemo-file-conflict-dialog.h',
    'nemo-file-dnd.h',
    'nemo-file-operations.h',
    'nemo-file-private.h',
    'nemo-file-queue.h',
    'nemo-file-undo-manager.h',
    'nemo-file-undo-operations.h',
    'nemo-file-utilities.h',
    'nemo-file.h',
    'nemo-generated.h',
    'nemo-global-preferences.h',
    'nemo-icon-canvas-item.h',
    'nemo-icon-container.h',
    'nemo-icon-dnd.h',
    'nemo-icon-info.h',
    'nemo-icon-names.h',
    'nemo-icon-private.h',
    'nemo-icon.h',
    'nemo-job-queue.h',
    'nemo-lib-self-check-functions.h',
    'nemo-link.h',
    'nemo-merged-directory.h',
    'nemo-metadata.h',
    'nemo-mime-application-chooser.h',
    'nemo-module.h',
    'nemo-monitor.h',
    'nemo-places-tree-view.h',
    'nemo-program-choosing.h',
    'nemo-progress-info-manager.h',
    'nemo-progress-info.h',
    'nemo-query.h',
    'nemo-recent.h',
    'nemo-saved-search-file.h',
    'nemo-search-directory-file.h',
    'nemo-search-directory.h',
    'nemo-search-engine-simple.h',
    'nemo-search-engine.h',
    'nemo-selection-canvas-item.h',
    'nemo-separator-action.h',
    'nemo-signaller.h',
    'nemo-thumbnails.h',
    'nemo-trash-monitor.h',
    'nemo-tree-view-drag-dest.h',
    'nemo-ui-utilities.h',
    'nemo-undo-manager.h',
    'nemo-undo-private.h',
    'nemo-undo-signal-handlers.h',
    'nemo-undo-transaction.h',
    'nemo-undo.h',
    'nemo-vfs-directory.h',
    'nemo-vfs-file.h',
    'nemo-widget-action.h',
    'nemo-widget-menu-item.h',
]

if tracker_enabled
    nemo_private_sources += 'nemo-search-engine-tracker.c'
endif

nemo_private_deps = [ cinnamon, eel, gail, glib, gtk, libexif, libxml, math,
    nemo_extension, tracker_sparql, x11, ]


nemo_private_lib = shared_library('nemo-private',
    nemo_private_sources,
    dependencies : nemo_private_deps,
    include_directories : [ rootInclude, ],
    install: true,
    c_args : nemo_definitions,
    # link_args : '-version-info @NEMO_private_VERSION_INFO@ -no-undefined',
)

nemo_private = declare_dependency(
    include_directories: include_directories('.'),
    link_with: [ nemo_private_lib ],
    dependencies: nemo_private_deps,
)


dataConf = configuration_data()
gschemaFile = configure_file(
    input : 'org.nemo.gschema.xml.in',
    output: 'org.nemo.gschema.xml',
    configuration : dataConf)

install_data(gschemaFile,
    install_dir: join_paths([ 'share', 'glib-2.0', 'schemas' ])
)
